infra/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: ecommerce/payment-service
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 4004
      targetPort: 4004
